# -*- coding: utf-8 -*-
#
# This file is part of Flask-IIIF
# Copyright (C) 2014 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Flask-IIIF is free software; you can redistribute it and/or modify
# it under the terms of the Revised BSD License; see LICENSE file for
# more details.

[metadata]
name = flask-iiif
version = attr: flask_iiif.__version__
description = "Flask-IIIF extension provides easy IIIF API standard integration."
long_description = file: README.rst, CHANGES.rst
keywords = 
license = BSD
author = Invenio collaboration
author_email = info@inveniosoftware.org
platforms = any
url = http://github.com/inveniosoftware/flask-iiif/
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    blinker>=1.4
    cachelib>=0.1
    Flask>=1.0.4
    Flask-RESTful>=0.3.7
    pillow>=4.0
    six>=1.7.2

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    flask-testing>=0.6.0
    pytest-invenio>=1.4.0
    werkzeug>=0.15.3
[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_iiif --cov-report=term-missing
testpaths = tests flask_iiif
filterwarnings = ignore::pytest.PytestDeprecationWarning
